update: Rename no servico de disparar req HTTP

--- a/streamwise-frontend/src/app/navbar/navbar.component.html
+++ b/streamwise-frontend/src/app/navbar/navbar.component.html
@@ -2,9 +2,9 @@
     <div class="brand">
         <h1>StreamWise</h1>
     </div>
-    <!-- <div class="menu-icon">
+     <div class="menu-icon">
         <i class="fas fa-bars"></i> 
-    </div> -->
+    </div>
     
 </nav>
 
