--- a/streamwise-frontend/src/app/card/card.component.css
+++ b/streamwise-frontend/src/app/card/card.component.css
@@ -4,10 +4,12 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
   padding: 10px;
+  width: auto;
+  max-width: 100%;
 }
 
 .card-image {
-  width: 100%;
+  width: 12.5rem;
   border-radius: 10px;
 }
 
