--- a/streamwise-frontend/src/app/home/home.component.html
+++ b/streamwise-frontend/src/app/home/home.component.html
@@ -1,8 +1,12 @@
 <div class="home-container">
-    <app-navbar></app-navbar> <!-- Navbar -->
+    <app-navbar></app-navbar>
 
     <div class="card-container">
         <app-card *ngFor="let service of services" [service]="service"></app-card>
+
+        <div class="fixed-card">
+            <button (click)="onAddCard()" class="add-button">Adicionar Card</button>
+        </div>
     </div>
 </div>
 
