--- a/streamwise-frontend/src/styles.scss
+++ b/streamwise-frontend/src/styles.scss
@@ -1,4 +1,12 @@
-* {
-  padding: 0;
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+
+html,
+body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
+
+
+@import 'bootstrap/scss/bootstrap';
