feat: Adicionado bootstrap icons e adicionado os icones de email e senha nos campos de Login

--- a/streamwise-frontend/src/app/pages/login/login.component.html
+++ b/streamwise-frontend/src/app/pages/login/login.component.html
@@ -12,14 +12,16 @@
     inputName="email"
     type="email"
     label="Email:"
-    placeholder="guilherme@email.com"
-    ></app-input-box>
+    placeholder="guilherme@email.com">
+    <i class="bi bi-envelope text-dark"></i>
+    </app-input-box>
 
     <app-input-box
     formControlName="password"
     inputName="password"
     type="password"
     label="Password:">
+    <i class="bi bi-eye-slash text-dark"></i>
     </app-input-box>
 
 </form>
