--- a/streamwise-frontend/src/app/components/form-layout/form-layout.component.html
+++ b/streamwise-frontend/src/app/components/form-layout/form-layout.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <main class="container d-flex flex-column align-items-center justify-content-start">
-    <div class="card p-4 text-center shadow" style="width: 22vw; height: 30rem; border-radius: 10px;">
+    <div class="card p-4 text-center shadow">
         <div class="card-body">
             <h2 class="fw-bold">{{ title }}</h2>
             <ng-content></ng-content>
