--- a/streamwise-frontend/src/app/components/form-layout/form-layout.component.scss
+++ b/streamwise-frontend/src/app/components/form-layout/form-layout.component.scss
@@ -1,3 +1,6 @@
+$mobile: 576px;
+$desktop: 992px;
+
 h1 {
     color: #fff;
 }
@@ -6,4 +9,26 @@ img {
     margin-top: 0.25rem;
     width: 2rem;
     filter: invert(100%) sepia(1%) saturate(875%) hue-rotate(278deg) brightness(113%) contrast(100%);
+}
+
+.card{
+    border-radius: 10px;
+}
+
+@media (max-width: $mobile) {
+    .card{
+        width: 60vw;
+        height: 80vh;
+
+        .fw-bold{
+            font-size: 1.25rem;
+        }
+    }
+}
+
+@media (min-width: $desktop) {
+    .card{
+        width: 24vw;
+        height: 30rem;
+    }
 }
