--- a/streamwise-frontend/src/app/components/input-box/input-box.component.html
+++ b/streamwise-frontend/src/app/components/input-box/input-box.component.html
@@ -1,4 +1,4 @@
-<div class="mb-3 input-wrapper">
+<div class="md-mb-3 mb-0 input-wrapper">
     <label for="inputField" class="form-label">{{ label }}</label>
     <div class="input-group">
         <input
