--- a/streamwise-frontend/src/app/pages/login/login.component.html
+++ b/streamwise-frontend/src/app/pages/login/login.component.html
@@ -20,7 +20,7 @@
     formControlName="password"
     inputName="password"
     type="password"
-    label="Password:">
+    label="Sua senha:">
     <i class="bi bi-eye-slash text-dark"></i>
     </app-input-box>
 
