--- a/streamwise-frontend/src/app/components/input-box/input-box.component.scss
+++ b/streamwise-frontend/src/app/components/input-box/input-box.component.scss
@@ -1,3 +1,6 @@
+$mobile: 576px;
+$desktop: 992px;
+
 .input-wrapper {
     label {
         font-size: 1.1rem;
@@ -28,4 +31,16 @@
         padding: 0.5rem 1rem;
         cursor: pointer;
     }
+}
+
+@media (max-width: $mobile) {
+    input,span{
+        height: 6vh;
+    }
+}
+
+@media (min-width: $desktop) {
+
+
+
 }
