--- a/streamwise-frontend/src/app/pages/home/home.component.html
+++ b/streamwise-frontend/src/app/pages/home/home.component.html
@@ -1,1 +1,20 @@
-<p>home works!</p>
+<nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
+    <div class="container-fluid">
+        <button class="btn btn-outline-light me-2" (click)="toggleMenu()">☰</button>
+        <span class="navbar-brand mx-auto">Meu Dashboard</span>
+    </div>
+</nav>
+
+<div class="sidebar" [ngClass]="{'open': isMenuOpen}">
+    <ul class="nav flex-column">
+        <li class="nav-item"><a href="#" class="nav-link">Página 1</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Página 2</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Página 3</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Página 4</a></li>
+    </ul>
+</div>
+
+
+<section>
+    <button (click)="logout()">Logout</button>
+</section>
