--- a/streamwise-frontend/src/app/pages/register/register.component.scss
+++ b/streamwise-frontend/src/app/pages/register/register.component.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     height: 100vh;
     width: 100%;
-    background-color: #431E6A;
+    background: linear-gradient(to right, #431E6A, #6A1B9A, #9C27B0, #D05CE3);
 }
 
 form {
