--- a/streamwise-frontend/src/app/pages/home/home.component.html
+++ b/streamwise-frontend/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-home navbar-dark fixed-top">
     <div class="container-fluid">
-        <button class="btn btn-outline-light me-2" (click)="toggleMenu()">☰</button>
-        <span class="navbar-brand mx-auto">Meu Dashboard</span>
+        <button class="btn me-2" (click)="toggleMenu()"><i class="bi bi-list"></i></button>
+        <span class="navbar-brand mx-auto">SteamWise</span>
     </div>
 </nav>
 
