--- a/streamwise-frontend/src/app/pages/home/home.component.scss
+++ b/streamwise-frontend/src/app/pages/home/home.component.scss
@@ -1,4 +1,20 @@
 
+.navbar-home{
+    background-color: purple;
+    font-family: Roboto;
+    font-weight: 500;
+}
+
+.btn{
+    background-color: purple;
+    border: 2px solid darkmagenta;
+
+    &:hover {
+        background-color: rgb(103, 0, 103);
+        transition: 0.3s
+    }
+}
+
 .sidebar {
     position: fixed;
     top: 0;
@@ -24,5 +40,9 @@
 }
 
 section{
-    margin-top: 10rem;
+    height: 100vh;
+    width: auto;
+    margin-top: 5rem;
+
+    background: linear-gradient(to right, #2C0E44, #431E6A, #6A1B9A, #9C27B0);
 }
