update: Ajustado design da pagina principal

--- a/streamwise-frontend/src/app/pages/home/home.component.scss
+++ b/streamwise-frontend/src/app/pages/home/home.component.scss
@@ -40,9 +40,9 @@
 }
 
 section{
-    height: 100vh;
+height: 100vh;
     width: auto;
-    margin-top: 5rem;
+    padding-top: 56px;
 
     background: linear-gradient(to right, #2C0E44, #431E6A, #6A1B9A, #9C27B0);
 }
