--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -1,10 +1,20 @@
 <div *ngIf="loading">Carregando...</div>
 
+
 <div *ngIf="!loading && !error">
+
+    
     <div *ngIf="signatures.length > 0; else emptyMessage">
         <ul>
             <li *ngFor="let signature of signatures">
-                {{ signature.name }}
+                <div class="card">
+                    <img class="card-img-top"
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTW4zvfRq0Vpjxlzu2Wvx_L7nJNdzy_d9Mx8g&s">
+                    <div class="card-body">
+                        <h4 class="card-title">{{signature.name}}</h4>
+                        <p class="card-text">texto</p>
+                    </div>
+                </div>
             </li>
         </ul>
     </div>
