feat: Adiciona outras informacoes da assinatura pro card

--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -12,7 +12,9 @@
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTW4zvfRq0Vpjxlzu2Wvx_L7nJNdzy_d9Mx8g&s">
                     <div class="card-body">
                         <h4 class="card-title">{{signature.name}}</h4>
-                        <p class="card-text">texto</p>
+                        <p class="card-text">{{signature.category}}</p>
+                        <p class="card-text">{{signature.price}}</p>
+                        <p class="card-text">{{signature.billingDate}}</p>
                     </div>
                 </div>
             </li>
