--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -4,7 +4,7 @@
 <div *ngIf="!loading && !error">
 
     
-    <div *ngIf="signatures.length > 0; else emptyMessage">
+    <div class="container" *ngIf="signatures.length > 0; else emptyMessage">
         <ul>
             <li *ngFor="let signature of signatures">
                 <div class="card">
