--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -1,4 +1,5 @@
 .container {
+    font-family: Roboto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,6 +70,7 @@ li {
     }
 
     .card-body {
+        background-color: #ccc;
         padding: 15px;
     }
 }
