--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -58,19 +58,62 @@ li {
 .card {
     width: 100%;
     max-width: 300px;
-    border: 1px solid #ccc;
+    border: 1px solid #ddd;
     border-radius: 10px;
     overflow: hidden;
     text-align: center;
-    background: #f9f9f9;
+    background: #fff;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+
+    &:hover {
+        transform: scale(1.05);
+    }
 
     img {
         width: 100%;
-        height: auto;
+        height: 50px; 
+        object-fit: cover;
     }
 
     .card-body {
-        background-color: #ccc;
         padding: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 3px;
+    }
+
+    .card-title {
+        font-size: 1.2rem;
+        font-weight: bold;
+        color: #333;
+    }
+
+    .badge {
+        background-color: #007bff;
+        color: white;
+        padding: 5px 10px;
+        border-radius: 20px;
+        font-size: 0.9rem;
+        text-transform: uppercase;
+    }
+
+    .price {
+        font-size: 1.4rem;
+        font-weight: bold;
+        color: #28a745;
+    }
+
+    .billing-date {
+        font-size: 0.9rem;
+        color: #666;
+        display: flex;
+        align-items: center;
+        gap: 5px;
+
+        i {
+            color: #007bff;
+        }
     }
 }
