--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -56,13 +56,15 @@ li {
 }
 
 .card {
+    display: flex;
+    align-items: center;
     width: 100%;
     max-width: 300px;
     border: 1px solid #ddd;
     border-radius: 10px;
     overflow: hidden;
     text-align: center;
-    background: #fff;
+    background: #c3c3c3;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
 
@@ -71,12 +73,15 @@ li {
     }
 
     img {
-        width: 100%;
+        width: 50px;
         height: 50px; 
         object-fit: cover;
+        border-radius: 100px;
+
     }
 
     .card-body {
+        width: 100%;
         padding: 15px;
         display: flex;
         flex-direction: column;
