--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -89,6 +89,7 @@ li {
     }
 
     .card-title {
+        margin: 0;
         font-size: 1.2rem;
         font-weight: bold;
         color: #333;
@@ -104,14 +105,17 @@ li {
     }
 
     .price {
+        margin: 0;
         font-size: 1.4rem;
         font-weight: bold;
         color: #28a745;
     }
 
     .billing-date {
+        margin: 0;
         font-size: 0.9rem;
         color: #666;
+
         i {
             color: #007bff;
         }
