--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -58,6 +58,7 @@ li {
 .card {
     display: flex;
     align-items: center;
+    padding: 8px;
     width: 100%;
     max-width: 300px;
     border: 1px solid #ddd;
@@ -73,8 +74,8 @@ li {
     }
 
     img {
-        width: 50px;
-        height: 50px; 
+        width: 89px;
+        height: 88px; 
         object-fit: cover;
         border-radius: 100px;
 
