--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -103,6 +103,7 @@ li {
         border-radius: 20px;
         font-size: 0.9rem;
         text-transform: uppercase;
+        border: 1px red solid;
     }
 
     .price {
