--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -102,7 +102,7 @@ li {
         border-radius: 20px;
         font-size: 0.9rem;
         text-transform: uppercase;
-        border: 1px red solid;
+        border: 1px #8B8B8E solid;
     }
 
     .price {
