style: Altera de UPPERCASE para Capitalize

--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -101,7 +101,7 @@ li {
         padding: 5px 10px;
         border-radius: 20px;
         font-size: 0.9rem;
-        text-transform: uppercase;
+        text-transform: capitalize;
         border: 1px #8B8B8E solid;
     }
 
