--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -102,6 +102,7 @@ li {
         border-radius: 20px;
         font-size: 0.9rem;
         text-transform: capitalize;
+        font-weight: 600;
         font-family: Poppins;
         border: 1px #8B8B8E solid;
     }
