--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -83,7 +83,7 @@ li {
 
     .card-body {
         width: 100%;
-        padding: 15px;
+        padding: 0 15px 15px;
         display: flex;
         flex-direction: column;
         align-items: center;
