style: Adiciona margin entre logo e corpo do card

--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -82,6 +82,7 @@ li {
     }
 
     .card-body {
+        margin-top: 0.25rem;
         width: 100%;
         padding: 0 15px 15px;
         display: flex;
