--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -94,6 +94,7 @@ li {
         margin: 0;
         font-size: 1.5rem;
         font-weight: bold;
+        text-transform: capitalize;
         color: #333;
     }
 
