--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -95,6 +95,7 @@ li {
         font-size: 1.5rem;
         font-weight: bold;
         text-transform: capitalize;
+        font-family: Lexend Deca;
         color: #333;
     }
 
