style: Muda cor do preco e do nome da assinatura

--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -96,7 +96,7 @@ li {
         font-weight: bold;
         text-transform: capitalize;
         font-family: Lexend Deca;
-        color: #333;
+        color: black;
     }
 
     .badge {
@@ -114,7 +114,7 @@ li {
         margin: 0;
         font-size: 1.4rem;
         font-weight: bold;
-        color: #28a745;
+        color: black;
     }
 
     .billing-date {
