--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -91,7 +91,7 @@ li {
     }
 
     .card-title {
-        margin: 0;
+        margin: 0.35rem 0 0 0;
         font-size: 1.5rem;
         font-weight: bold;
         text-transform: capitalize;
