refactor: Altera data de cobranca de proxima cobranca para todo dia x

--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -15,7 +15,7 @@
                         <p class="price">R$ {{ signature.price }}</p>
             
                         <p class="billing-date">
-                            <i class="fas fa-calendar-alt"></i> Próxima cobrança: {{ getBillingDay(signature.billingDate) }}
+                            <i class="fas fa-calendar-alt"></i> Todo dia {{ getBillingDay(signature.billingDate) }}
                         </p>
                     </div>
                 </div>
