--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -19,6 +19,11 @@
                     </div>
                 </div>
             </li>
+            <li>
+                <div class="card add-card" (click)="openModal()">
+                    <div class="add-icon">+</div>
+                </div>
+            </li>
         </ul>
     </div>
 
