--- a/streamwise-frontend/src/styles.scss
+++ b/streamwise-frontend/src/styles.scss
@@ -4,3 +4,6 @@
 
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons.css';
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
