--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -20,7 +20,7 @@
                 </div>
             </li>
             <li>
-                <div class="card add-card" (click)="openModal()">
+                <div class="card add-card" (click)="openModal(content)">
                     <div class="add-icon">+</div>
                 </div>
             </li>
@@ -34,50 +34,41 @@
 
 <div *ngIf="error">Ocorreu um erro ao buscar as assinaturas.</div>
 
-<div class="modal fade" id="addSignatureModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Adicionar Assinatura</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form #signatureForm="ngForm">
-                    <div class="mb-3">
-                        <label for="name" class="form-label">Nome</label>
-                        <input type="text" id="name" class="form-control" [(ngModel)]="newSignature.name" name="name"
-                            required>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="category" class="form-label">Categoria</label>
-                        <input type="text" id="category" class="form-control" [(ngModel)]="newSignature.category"
-                            name="category" required>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="price" class="form-label">Preço</label>
-                        <input type="number" id="price" class="form-control" [(ngModel)]="newSignature.price"
-                            name="price" required>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="billingDate" class="form-label">Data de Cobrança</label>
-                        <input type="date" id="billingDate" class="form-control" [(ngModel)]="newSignature.billingDate"
-                            name="billingDate" required>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="signatureImage" class="form-label">Imagem</label>
-                        <input type="text" id="signatureImage" class="form-control"
-                            [(ngModel)]="newSignature.signatureImage" name="signatureImage" required>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-primary" (click)="addSignature()">Adicionar</button>
-            </div>
-        </div>
+<ng-template #content let-modal>
+    <div class="modal-header">
+        <h5 class="modal-title">Adicionar Assinatura</h5>
+        <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss()"></button>
     </div>
-</div>
+    <div class="modal-body">
+        <form #signatureForm="ngForm">
+            <div class="mb-3">
+                <label for="name" class="form-label">Nome</label>
+                <input type="text" id="name" class="form-control" [(ngModel)]="newSignature.name" name="name" required>
+            </div>
+            <div class="mb-3">
+                <label for="category" class="form-label">Categoria</label>
+                <input type="text" id="category" class="form-control" [(ngModel)]="newSignature.category"
+                    name="category" required>
+            </div>
+            <div class="mb-3">
+                <label for="price" class="form-label">Preço</label>
+                <input type="number" id="price" class="form-control" [(ngModel)]="newSignature.price" name="price"
+                    required>
+            </div>
+            <div class="mb-3">
+                <label for="billingDate" class="form-label">Data de Cobrança</label>
+                <input type="date" id="billingDate" class="form-control" [(ngModel)]="newSignature.billingDate"
+                    name="billingDate" required>
+            </div>
+            <div class="mb-3">
+                <label for="signatureImage" class="form-label">Imagem</label>
+                <input type="text" id="signatureImage" class="form-control" [(ngModel)]="newSignature.signatureImage"
+                    name="signatureImage" required>
+            </div>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="modal.dismiss()">Cancelar</button>
+        <button type="button" class="btn btn-primary" (click)="addSignature()">Adicionar</button>
+    </div>
+</ng-template>
