--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -60,17 +60,17 @@
                     name="billingDate" required>
             </div>
             <div class="mb-3">
-                <label for="signatureImage" class="form-label">Escolha uma Imagem</label>
-                <select id="signatureImage" class="form-control" [(ngModel)]="newSignature.signatureImage" name="signatureImage"
-                    required>
-                    <option *ngFor="let signature of availableSignatures" [ngValue]="signature.url">
+                <label for="signatureImageCode" class="form-label">Escolha uma Imagem</label>
+                <select id="signatureImageCode" class="form-control" [(ngModel)]="newSignature.signatureImageCode"
+                    name="signatureImageCode" required>
+                    <option *ngFor="let signature of availableSignatures" [value]="signature.name">
                         {{ signature.name }}
                     </option>
                 </select>
             </div>
-            
-            <div *ngIf="newSignature.signatureImage">
-                <img [src]="newSignature.signatureImage" alt="Prévia da Imagem" width="100">
+
+            <div *ngIf="newSignature.signatureImageCode">
+                <img [src]="getImageUrl(newSignature.signatureImageCode)" alt="Prévia da Imagem" width="100">
             </div>
         </form>
     </div>
