--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -16,6 +16,8 @@
                         <p class="billing-date">
                             <i class="fas fa-calendar-alt"></i> Todo dia {{ getBillingDay(signature.billingDate) }}
                         </p>
+
+                        <i class="bi bi-pencil-square" (click)="editSignature(signature)"></i>
                     </div>
                 </div>
             </li>
