style: Altera cor do icone de calendario

--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -14,7 +14,7 @@
                         <p class="price">R$ {{ signature.price }}</p>
             
                         <p class="billing-date">
-                            <i class="fas fa-calendar-alt"></i> Todo dia {{ getBillingDay(signature.billingDate) }}
+                            <i class="bi bi-calendar-event"></i> Todo dia {{ getBillingDay(signature.billingDate) }}
                         </p>
 
                         <i class="bi bi-pencil-square" (click)="editSignature(signature)"></i>
