update: Ajusta metodo que ira abrir modal de edicao do card

--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -17,7 +17,7 @@
                             <i class="bi bi-calendar-event"></i> Todo dia {{ getBillingDay(signature.billingDate) }}
                         </p>
 
-                        <i class="bi bi-pencil-square" (click)="editSignature(signature)"></i>
+                        <i class="bi bi-pencil-square" (click)="openEditModal(content, signature)"></i>
                     </div>
                 </div>
             </li>
