--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -46,26 +46,26 @@
         <form #signatureForm="ngForm">
             <div class="mb-3">
                 <label for="name" class="form-label">Nome</label>
-                <input type="text" id="name" class="form-control" [(ngModel)]="newSignature.name" name="name" required>
+                <input type="text" id="name" class="form-control" [(ngModel)]="selectedSignature.name" name="name" required>
             </div>
             <div class="mb-3">
                 <label for="category" class="form-label">Categoria</label>
-                <input type="text" id="category" class="form-control" [(ngModel)]="newSignature.category"
+                <input type="text" id="category" class="form-control" [(ngModel)]="selectedSignature.category"
                     name="category" required>
             </div>
             <div class="mb-3">
                 <label for="price" class="form-label">Preço</label>
-                <input type="number" id="price" class="form-control" [(ngModel)]="newSignature.price" name="price"
+                <input type="number" id="price" class="form-control" [(ngModel)]="selectedSignature.price" name="price"
                     required>
             </div>
             <div class="mb-3">
                 <label for="billingDate" class="form-label">Data de Cobrança</label>
-                <input type="date" id="billingDate" class="form-control" [(ngModel)]="newSignature.billingDate"
+                <input type="date" id="billingDate" class="form-control" [(ngModel)]="selectedSignature.billingDate"
                     name="billingDate" required>
             </div>
             <div class="mb-3">
                 <label for="signatureImageCode" class="form-label">Escolha uma Imagem</label>
-                <select id="signatureImageCode" class="form-control" [(ngModel)]="newSignature.signatureImageCode"
+                <select id="signatureImageCode" class="form-control" [(ngModel)]="selectedSignature.signatureImageCode"
                     name="signatureImageCode" required>
                     <option *ngFor="let signature of availableSignatures" [value]="signature.name">
                         {{ signature.name }}
@@ -73,13 +73,15 @@
                 </select>
             </div>
 
-            <div *ngIf="newSignature.signatureImageCode">
-                <img [src]="getImageUrl(newSignature.signatureImageCode)" alt="Prévia da Imagem" width="100">
+            <div *ngIf="selectedSignature.signatureImageCode">
+                <img [src]="getImageUrl(selectedSignature.signatureImageCode)" alt="Prévia da Imagem" width="100">
             </div>
         </form>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="modal.dismiss()">Cancelar</button>
-        <button type="button" class="btn btn-primary" (click)="addSignature()">Adicionar</button>
+        <button type="button" class="btn btn-primary" (click)="isEditMode ? editSignature() : addSignature()">
+            {{ isEditMode ? 'Salvar Alterações' : 'Adicionar Assinatura' }}
+        </button>
     </div>
 </ng-template>
