--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -18,6 +18,7 @@
                         </p>
 
                         <i class="bi bi-pencil-square" (click)="openEditModal(content, signature)"></i>
+                        <i class="bi bi-x-circle" (click)="deleteSignature()"></i>
                     </div>
                 </div>
             </li>
