--- a/streamwise-frontend/src/styles.scss
+++ b/streamwise-frontend/src/styles.scss
@@ -7,3 +7,10 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+
+
+html,
+body {
+    height: 100%;
+    min-height: 100vh;
+}
