feat: Adiciona flag que quando for maior que 2 cards em tela, muda o layout

--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -1,7 +1,7 @@
 
 
 <div>
-    <div class="container">
+    <div [ngClass]="{'container': true, 'scrollable': isScrollable}">
         <ul [ngClass]="getGridClass()">
             <li *ngFor="let signature of signatures">
                 <div class="card">
