--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -2,9 +2,9 @@
     font-family: Roboto;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 ul {
@@ -14,6 +14,10 @@ ul {
     list-style: none;
     width: 80%;
     justify-content: center;
+}
+
+.container.scrollable {
+    align-items: flex-start;
 }
 
 // 1 item → Centralizado
@@ -37,6 +41,7 @@ ul {
     margin-top: 2rem;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto auto;
+
 
 }
 
