--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -5,11 +5,15 @@
         <ul [ngClass]="getGridClass()">
             <li *ngFor="let signature of signatures">
                 <div class="card">
+                    
                     <img class="card-img-top" [src]="signature.imageUrl" alt="Imagem da categoria">
+                    
+                    <p class="card-active">Status: {{ signature.active }}</p>
+                    
+                    <h4 class="card-title">{{ signature.name }}</h4>
                     <div class="card-body">
                         <span class="badge">{{ signature.category }}</span>
 
-                        <h4 class="card-title">{{ signature.name }}</h4>
             
                         <p class="price">R$ {{ signature.price }}</p>
             
