update: remove icone e altera texto do dia da cobrança

--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -17,7 +17,7 @@
 
                     <h4 class="card-title">{{ signature.name }}</h4>
                     <p class="billing-date">
-                        <i class="bi bi-calendar-event"></i> Todo dia {{ getBillingDay(signature.billingDate) }}
+                         Cobrança todo dia {{ getBillingDay(signature.billingDate) }}
                     </p>
                     <div class="card-body">
                         <span class="badge">{{ signature.category }}</span>
