style: escurece a cor da categoria pra um cinza mais escuro

--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -107,7 +107,7 @@ li {
     }
 
     .badge {
-        color: #8B8B8E;
+        color: #5b5b5e;
         padding: 5px 10px;
         border-radius: 20px;
         font-size: 0.9rem;
