--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -203,11 +203,30 @@ li {
             display: flex;
             align-items: center;
             justify-content: center;
-
-            button{
-                width: 150px;
+            width: 150px;
                 height: 200px;
+                
+            
+                    
+                 .btn-one{  
+                        border-radius: 10px;
+                        background-color: #6b1a9b;
+                        width: 100%;
+                        height: 100%;
+                        font-family: Roboto;
+                }
+
+                .btn-two{  
+                        border-radius: 10px;
+                        background-color: #9124ab;
+                        width: 100%;
+                        height: 100%;
+                        font-family: Roboto;
+                }
+            img{
+                width: 3rem;
             }
+
         }
 }
 
