--- a/streamwise-frontend/src/app/components/card/card.component.scss
+++ b/streamwise-frontend/src/app/components/card/card.component.scss
@@ -5,16 +5,17 @@
     align-items: center;
     width: 100%;
     min-height: 100vh;
+
+    ul {
+        display: grid;
+        gap: 15px;
+        padding: 0;
+        list-style: none;
+        width: 80%;
+        justify-content: center;
+    }
 }
 
-ul {
-    display: grid;
-    gap: 15px;
-    padding: 0;
-    list-style: none;
-    width: 80%;
-    justify-content: center;
-}
 
 .container.scrollable {
     align-items: flex-start;
@@ -228,6 +229,27 @@ li {
             }
 
         }
+}
+
+.modal-body{
+
+    .streaming-card{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    ul{
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+
+    }
+
+    li{
+        display: inline-block;
+    }
+
 }
 
 ::ng-deep {
