feat: encapsula streamings card em um button

--- a/streamwise-frontend/src/app/components/card/card.component.html
+++ b/streamwise-frontend/src/app/components/card/card.component.html
@@ -81,11 +81,12 @@
 
                 <div class="card-list">
                 
+                    <button>
                     <div class="streaming-card">
                         <img [src]="signature.image" alt="">
                         <p>{{signature.name}}</p>
                     </div>
-                
+                </button>
                 </div>
 
             </li>
